finish reports rewrite
